--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "nerv-devtools": "^1.3.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "taro-ui": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.8",
